--- a/AI MUSIC GENERATION PROJECT.ipynb
+++ b/AI MUSIC GENERATION PROJECT.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **-----------------------**>**AI MUSIC GENERATION PROJECT**<**-----------------------**"
+    "# **----------------**>**AI MUSIC GENERATION PROJECT**<**----------------**"
    ]
   },
   {
